--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "employeedirectory",
+  "name": "hw19employee-directory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "node": "^14.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -30,5 +30,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^7.22.5",
+    "@testing-library/jest-dom": "^4.2.4",
+    "jest-dom": "^4.0.0"
   }
 }
